# cmake_practice

./: CMakeLists.txt  good_morning.cpp  hello.cpp  main.cpp
